--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'IBM Plex Sans', sans-serif;
+
 }
 
 .container {
@@ -34,6 +35,26 @@ body {
 
 .mt-5 {
     margin-top: 50px;
+}
+
+.mb-1 {
+    margin-bottom: 10px;
+}
+
+.mb-2 {
+    margin-bottom: 20px;
+}
+
+.mb-3 {
+    margin-bottom: 30px;
+}
+
+.mb-4 {
+    margin-bottom: 40px;
+}
+
+.mb5 {
+    margin-bottom: -50px;
 }
 
 
@@ -162,6 +183,10 @@ strong,
         width: 100%;
         margin: 0 auto;
     }
+
+    #patient-form {
+        display: table;
+    }
 }
 
 /* form style */
@@ -212,18 +237,21 @@ input {
 
 input[type="text"]:read-only,
 input[type="number"]:read-only {
-    /* background-color: #EEEEEE; */
+    /* background-color: #EEEEEE;
     border-bottom: 1px solid black !important;
-    font-size: 1.25rem;
+    font-size: 1.25rem; */
+    width: 50%;
 }
 
 input[type="submit"], .edit {
     background-color: #3E54AC !important;
     color: #fff;
+    cursor: pointer;
 }
 
 .discharge {
     background-color: antiquewhite;
+    cursor: pointer;
 }
 
 input:invalid {
@@ -257,8 +285,7 @@ input:focus {
     padding-right: 15px;
 }
 
-
-
 .currentTime {
     background-color: aliceblue;
 }
+
